<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="personal.rowan.sandbox.ui.detail.view.DetailSpritesCardViewModel"/>
    </data>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/fake_card_background"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:padding="16dp"
        android:elevation="2dp"
        android:animateLayoutChanges="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/textColorPrimary"
            android:text="@string/activity_detail_sprites_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/activity_detail_front_sprite_iv"
                android:layout_width="0dp"
                android:layout_height="102dp"
                android:contentDescription="@string/activity_detail_front_sprite_content_description"
                android:layout_weight="1"
                app:imageUrl="@{viewModel.frontSpriteUrl}"/>

            <ImageView
                android:id="@+id/activity_detail_back_sprite_iv"
                android:layout_width="0dp"
                android:layout_height="102dp"
                android:contentDescription="@string/activity_detail_back_sprite_content_description"
                android:layout_weight="1"
                app:imageUrl="@{viewModel.backSpriteUrl}"/>

        </LinearLayout>

    </LinearLayout>

</layout>