<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="personal.rowan.sandbox.ui.detail.view.DetailFlavorCardViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/fake_card_background"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:animateLayoutChanges="true"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/activity_detail_type_header"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:id="@+id/activity_detail_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/textColorPrimaryLight"
                    android:text="@{viewModel.type}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/activity_detail_abilities_header"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/textColorPrimaryLight"
                    android:text="@{viewModel.abilities}"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/activity_detail_height_header"/>

                <TextView
                    android:id="@+id/activity_detail_height_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/textColorPrimaryLight"
                    android:text="@{viewModel.height}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/activity_detail_weight_header"/>

                <TextView
                    android:id="@+id/activity_detail_weight_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/textColorPrimaryLight"
                    android:text="@{viewModel.weight}"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_detail_pokedex_entries_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/textColorPrimary"
                android:text="@string/activity_detail_pokedex_entries_header"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/activity_detail_pokedex_entries_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/textColorPrimaryLight"
                android:text="@{viewModel.pokedexEntries}" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        
            <Button
                android:id="@+id/activity_detail_load_flavor_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_detail_load_flavor_btn"
                android:textColor="@color/textColorButtonFlat"
                style="?attr/borderlessButtonStyle"
                android:layout_gravity="end"/>

            <ProgressBar
                android:id="@+id/activity_detail_load_flavor_pb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>

</layout>